fixed wrapping film ticks

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,6 +4,7 @@
     top: 0;
     display: flex;
     max-height: 60px;
+    overflow-x: hidden;
 }
 
 .page-footer {
@@ -12,6 +13,7 @@
     background-color: #39163e;
     display: flex;
     max-height: 60px;
+    overflow-x: hidden;
 }
 
 .film-strip-tick {
